# libqalculate-android

./: build.gradle  gradle.properties
lib/: CMakeLists.txt  build.gradle
lib/src/main/cpp/: .gitignore  0001_fix_libqalculate_util.patch  0002_date_to_calendar_android.patch  libqalculate.i  liqalculate_util.patch
